--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,16 @@
-.bg-oscuro{
+.bg-mf{
     background-color: #03001C;
 }
 
-.bg-ocuro-light{
-    background-color: #301E67;
+.bg-color{
+    background-color: #6E07F3;
 }
 .bg-blue-dark{
     background-color: #5B8FB9;
 }
 .bg-blue-light{
     background-color: #B6EADA;
+}
+.text-color-blue{
+    color: #865DFF;
 }
